--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,56 @@
-# .env.example
-# Copia este archivo a .env.local y configura las variables
+# Variables de Entorno - Frontend Notes
 
-# API URL
+# ================================
+# CONFIGURACIÓN DEL BACKEND API
+# ================================
+
+# URL base del API backend
+# Producción: https://apinotasdb-production.up.railway.app
+# Desarrollo: http://localhost:8000 (si ejecutas el backend localmente)
 NEXT_PUBLIC_API_URL=https://apinotasdb-production.up.railway.app
+
+# ================================
+# CONFIGURACIÓN DE VERCEL (Opcional)
+# ================================
+
+# URL de la aplicación en Vercel (se configura automáticamente en producción)
+# NEXT_PUBLIC_VERCEL_URL=https://frontend-notes-aineles.vercel.app
+
+# ================================
+# ANALYTICS Y MONITOREO (Opcional)
+# ================================
+
+# Vercel Analytics (se activa automáticamente en producción)
+# NEXT_PUBLIC_VERCEL_ANALYTICS_ID=
+
+# ================================
+# CONFIGURACIÓN DE ENTORNO
+# ================================
+
+# Ambiente actual (development, production, test)
+# NODE_ENV=development
+
+# ================================
+# NOTAS IMPORTANTES
+# ================================
+
+# 1. NUNCA subas este archivo con valores reales al repositorio
+# 2. Copia este archivo como .env.local para desarrollo local
+# 3. Las variables que comienzan con NEXT_PUBLIC_ están disponibles en el navegador
+# 4. Las variables sin NEXT_PUBLIC_ solo están disponibles en el servidor
+# 5. En Vercel, configura estas variables en: Project Settings > Environment Variables
+
+# ================================
+# INSTRUCCIONES DE USO
+# ================================
+
+# Para desarrollo local:
+# 1. Copia este archivo: cp .env.example .env.local
+# 2. Edita .env.local con tus valores locales
+# 3. Reinicia el servidor de desarrollo
+
+# Para producción en Vercel:
+# 1. Ve a tu proyecto en Vercel Dashboard
+# 2. Settings > Environment Variables
+# 3. Agrega cada variable con su valor correspondiente
+# 4. Redeploy tu aplicación para aplicar los cambios
